# semantic-search

./: .gitignore  LICENSE  README.md  partial_export.txt  project_export.txt  pyproject.toml  выжимка.txt
config/: app_config.json
data/evaluation_results/: comparison_results.csv  detailed_results.json  diploma_comparison_report.txt
data/evaluation_results/diploma_bw_plots/: plot_explanations.txt
data/models/: doc2vec_model.model  doc2vec_model_800_1_metadata.json  doc2vec_model_corpus_info.pkl  doc2vec_model_metadata.json
docs/: ПРЕЗЕНТАЦИЯ.pptx
docs/report/: issledovatelskiy_razdel.tex  prilozheniya.tex  referat.tex  spisok_istochnikov.tex
docs/report/code/: doc2vec_trainer.py  text_summarizer.py
report/: analiticheskiy_razdel.tex  konstruktorskiy_razdel.tex  main.tex  oboznacheniya.tex  opredeleniya.tex  preamble.tex  tekhnologicheskiy_razdel.tex  vvedenie.tex  zad_plan.tex  zaklyuchenie.tex
report/code/: adapt_params_for_language.py  document_processor.py  extract_from_pdf_streaming.py  search_engine.py  search_similar_to_document.py
report/images/diploma_bw_plots/: plot_explanations.txt
scripts/: build.py  cache_clear.py  check_dependencies.py  check_spacy.py  cleanup.py  demo_evaluation.py  diploma_demo.py  diploma_demo_black_white.py  export_project.py  inspect_corpus.py  list_models.py  partial_export.py  path.py  presentation_generator.py  print_project_tree.py  print_tree.py  run_semantic_search.bat  run_semantic_search.sh  setup_spacy.py
src/semantic_search/: __init__.py  cli.py  config.py  hello.py  main.py
src/semantic_search/core/: __init__.py  doc2vec_trainer.py  document_processor.py  search_engine.py  text_summarizer.py
src/semantic_search/evaluation/: __init__.py  baselines.py  comparison.py  metrics.py
src/semantic_search/gui/: __init__.py  controller.py  evaluation_widget.py  main_window.py
src/semantic_search/gui/views/: __init__.py  document_loader.py  results_view.py  search_panel.py
src/semantic_search/gui/widgets/: __init__.py  progress_bar.py
src/semantic_search/utils/: __init__.py  cache_manager.py  config_models.py  file_utils.py  logging_config.py  model_evaluation.py  notification_system.py  performance_monitor.py  statistics.py  task_manager.py  text_utils.py  validators.py
tests/: test_core_functionality.py  test_import.py
