[project]
name = "semantic-search"
version = "0.1.0"
description = "Десктопное приложение для семантического поиска по документам с использованием Doc2Vec"
authors = [
    {name = "Evgeny Odintsov",email = "ev1genial@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pymupdf (>=1.26.0,<2.0.0)",
    "pywin32 (>=310,<311); sys_platform == 'win32'",
    "python-docx (>=1.1.2,<2.0.0)",
    "spacy (>=3.8.7,<4.0.0)",
    "gensim (>=4.3.3,<5.0.0)",
    "pyqt6 (>=6.9.1,<7.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "click (>=8.2.1,<9.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]

[tool.poetry]
packages = [{include = "semantic_search", from = "src"}]

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.13"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
